--- a/src/app/hub/components/card-topics-mobile/card-topics-mobile.component.html
+++ b/src/app/hub/components/card-topics-mobile/card-topics-mobile.component.html
@@ -9,5 +9,13 @@
         <mat-icon class="topic-icons">check_circle</mat-icon>
         <mat-icon class="topic-icons">share</mat-icon>
         <mat-icon class="topic-icons">report</mat-icon>
-        <mat-icon class="topic-icons">forum</mat-icon></div>
-    </mat-card>
+        <mat-icon class="topic-icons">forum</mat-icon>
+    </div>
+</mat-card>
+
+<mat-card>
+    <mat-card-content>
+        <div>Tema 1</div>
+        <div>Ver más</div>
+    </mat-card-content>
+</mat-card>
