--- a/src/app/hub/components/search-input-mobile/search-input-mobile.component.scss
+++ b/src/app/hub/components/search-input-mobile/search-input-mobile.component.scss
@@ -1,18 +1,23 @@
-.input-wrapper {
+:host {
+  width: 100%;
+  float: left;
+  padding: 0 20px;
+
+  .input-wrapper {
     position: relative;
     width: 90%;
     border: 1px solid #ccc;
     background: #FFFFFF;
     border-radius: 5px;
   }
-  
+
   .input {
     box-sizing: border-box;
     color: #191919;
     padding: 15px 15px 15px 35px;
     width: 100%;
   }
- 
+
   .input-icon {
     color: #71F5AD;
     position: absolute;
@@ -22,4 +27,4 @@
     top: 50%;
     transform: translateY(-50%);
   }
-  
+}
