--- a/src/app/hub/components/tabs-mobile/tabs-mobile.component.html
+++ b/src/app/hub/components/tabs-mobile/tabs-mobile.component.html
@@ -20,6 +20,16 @@
       <div class="mt-1">Participa, invita y denuncia</div>
       <card-topics-mobile></card-topics-mobile>
     </mat-tab>
-   
+
   </mat-tab-group>
+</div>
+
+<div class="set-12 row">
+  <mat-card>
+    <span>Hello</span>
+  </mat-card>
+
+  <mat-card>
+    <span>Hello</span>
+  </mat-card>
 </div>
