add complaints dialog

--- a/src/app/components/public-document-mobile-fixed-tools/public-document-mobile-fixed-tools.component.html
+++ b/src/app/components/public-document-mobile-fixed-tools/public-document-mobile-fixed-tools.component.html
@@ -3,7 +3,7 @@
     <mat-icon>search</mat-icon>
     <!-- <small>Búsqueda</small> -->
   </button>
-  <button type="button" class="tool" [class.fixedpos]="open">
+  <button type="button" class="tool" [class.fixedpos]="open" (click)="popComplaintsDialog()">
     <mat-icon>warning</mat-icon>
     <!-- <small>Denuncia</small> -->
   </button>
