--- a/src/app/hub/components/card-topics-mobile/card-topics-mobile.component.html
+++ b/src/app/hub/components/card-topics-mobile/card-topics-mobile.component.html
@@ -1,21 +1,17 @@
-<mat-card class="topic-card mt-1">
-    <mat-card-content class="topic-header">
-        <div class="topic-title ">Tema 1</div>
-        <div class="topic-viewmore" (click)="openDialog()">Ver más</div>
-    </mat-card-content>
-    <div class="topic-body mt-1">Ultima actualización 01/12/2022</div>
-    <div class="topic-footer mt-2">
-        <mat-icon class="topic-icons">favorite</mat-icon>
-        <mat-icon class="topic-icons">check_circle</mat-icon>
-        <mat-icon class="topic-icons">share</mat-icon>
-        <mat-icon class="topic-icons">report</mat-icon>
-        <mat-icon class="topic-icons">forum</mat-icon>
-    </div>
-</mat-card>
+<div class="set-12 topic-card">
+    <mat-card>
+        <div>
+            <h3 class="set-9 ">Tema 1</h3>
+            <span class="set-3" (click)="openDialog()">Ver más</span>
+            <p class="set-12 ">Ultima actualización 01/12/2022</p>
+        </div>
 
-<mat-card>
-    <mat-card-content>
-        <div>Tema 1</div>
-        <div>Ver más</div>
-    </mat-card-content>
-</mat-card>
+        <div class="set-12 icons">
+            <mat-icon>favorite</mat-icon>
+            <mat-icon>check_circle</mat-icon>
+            <mat-icon>share</mat-icon>
+            <mat-icon>report</mat-icon>
+            <mat-icon>forum</mat-icon>
+        </div>
+    </mat-card>
+</div>
