--- a/src/app/hub/components/community-mobile/community-mobile.component.html
+++ b/src/app/hub/components/community-mobile/community-mobile.component.html
@@ -1,39 +1,24 @@
-<div class="people-list" id="people-list">
-    <ul class="list">
-        <li class="people mt-1">
-            <img class="img-people" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/195612/chat_avatar_01.jpg" alt="avatar" />
-            <div class="about">
-                <div class="name">Vincent Porter</div>
-                <div class="status">
+<div class="community-mobile-card" >
+        <mat-card>
+            <img class="avatar set-2" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/195612/chat_avatar_01.jpg" alt="avatar" />
+            <div class="set-9">
+                <span >Vincent Porter</span>
+                <br>
+                <span >
                  Colaborador desde febrero de 2022
-                </div>
+                </span>
             </div>
             <mat-icon>more_vert</mat-icon>
-        </li>
-
-        <li class="people mt-1">
-            <img class="img-people"  src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/195612/chat_avatar_02.jpg" alt="avatar" />
-            <div class="about">
-                <div class="name ">Aiden Chavez</div>
-                <div class="status">
-                    Colaborador desde febrero de 2022
-                </div>
+        </mat-card>
+        <div class="people">
+            <img class="avatar set-2" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/195612/chat_avatar_01.jpg" alt="avatar" />
+            <div class="set-8">
+                <span >Vincent Porter</span>
+       
+                <span >
+                 Colaborador desde febrero de 2022
+                </span>
             </div>
-            <mat-icon>more_vert</mat-icon>
-        </li>
-
-        <li class="people mt-1">
-            <img class="img-people" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/195612/chat_avatar_03.jpg" alt="avatar" />
-            <div class="about">
-                <div class="name">Mike Thomas</div>
-                <div class="status">
-                    Colaborador desde febrero de 2022
-                </div>
-
-            </div>
-            <mat-icon>more_vert</mat-icon>
-        </li>
-
-    </ul>
-
+            <mat-icon class="set-2">more_vert</mat-icon>
+        </div>
 </div>
