--- a/src/app/hub/components/tabs-mobile/tabs-mobile.component.html
+++ b/src/app/hub/components/tabs-mobile/tabs-mobile.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="set-12">
   <mat-tab-group animationDuration="0ms">
     <mat-tab label="Temas">
       <search-input-mobile></search-input-mobile>
@@ -14,22 +14,12 @@
       <search-input-mobile></search-input-mobile>
       <community-mobile></community-mobile>
     </mat-tab>
-    <mat-tab class="achieve" label="Metas">
+    <mat-tab  label="Metas">
       <search-input-mobile></search-input-mobile>
-      <div class="achieve-title mt-1">Metas Logradas</div>
-      <div class="mt-1">Participa, invita y denuncia</div>
+      <h3>Metas Logradas</h3>
+      <h3 >Participa, invita y denuncia</h3>
       <card-topics-mobile></card-topics-mobile>
     </mat-tab>
 
   </mat-tab-group>
-</div>
-
-<div class="set-12 row">
-  <mat-card>
-    <span>Hello</span>
-  </mat-card>
-
-  <mat-card>
-    <span>Hello</span>
-  </mat-card>
 </div>
