--- a/src/styles.scss
+++ b/src/styles.scss
@@ -590,6 +590,13 @@ mat-form-field {
   }
 }
 
+.full-screen-mobile{
+  .mat-dialog-container {
+    border-radius: 0 !important  
+  }
+  }
+
+
 .viewer-dialog,
 .full-dialog {
   height: 100%;
@@ -793,5 +800,6 @@ mat-card {
         float: left;
       }
     }
+  
   }
 }
