--- a/src/app/hub/app-configuration/app-configuration.component.html
+++ b/src/app/hub/app-configuration/app-configuration.component.html
@@ -32,10 +32,10 @@
 </div> -->
 
 <div class="form-profile " *ngIf="isDataAvailable && isMobile">
-    <form>
+    <form [formGroup]="formGroup" (submit)="onUpdateUserData(formGroup)">
         <h2>Tu perfil</h2>
         <div class="set-12 avatarhldr mt-2">
-            <button class="avatar">
+            <button type="button" class="avatar">
                 <img src="{{ user.avatarImage }}" alt="{{ user.firstname }}" *ngIf="user.avatarImage != null" />
                 <span *ngIf="user.avatarImage == null">
                     {{ user.firstname | firstword | firstletter
@@ -45,19 +45,19 @@
         </div>
         <div>
             <mat-form-field appearance="outline">
-                <mat-label>Nombre</mat-label>
-                <input matInput placeholder="Nombre" [value]="user.firstname">
+                <mat-label>Nombre(s)</mat-label>
+                <input type="text" matInput formControlName="firstname">
             </mat-form-field>
 
             <mat-form-field appearance="outline">
-                <mat-label>Apellido</mat-label>
-                <input matInput placeholder="Apellido" [value]="user.lastname">
+                <mat-label>Apellido(s)</mat-label>
+                <input type="text" matInput formControlName="lastname">
             </mat-form-field>
 
             <mat-form-field appearance="outline">
                 <mat-label>Genero</mat-label>
-                <mat-select>
-                    <mat-option *ngFor="let genre of genres" [value]="genre.value">
+                <mat-select formControlName="gender">
+                    <mat-option *ngFor="let genre of genders" [value]="genre.value">
                         {{genre.viewValue}}
                     </mat-option>
                 </mat-select>
@@ -65,32 +65,27 @@
 
             <mat-form-field appearance="outline">
                 <mat-label>Código Postal</mat-label>
-                <input matInput placeholder="CDMX">
+                <input matInput formControlName="postalcode">
             </mat-form-field>
 
             <mat-form-field appearance="outline">
                 <mat-label>Ocupacion</mat-label>
-                <input matInput placeholder="Empleado">
+                <input matInput formControlName="ocupation">
             </mat-form-field>
 
             <mat-form-field appearance="outline">
                 <mat-label>Telefono</mat-label>
-                <input matInput placeholder="55-55-55-55-55" type="number">
+                <input matInput formControlName="phone">
             </mat-form-field>
         </div>
-    </form>
 
-    <mat-checkbox (change)="showText = !showText">¿Perteneces a una asociación?</mat-checkbox>
-    <!--  <h4 >¿Perteneces a una asociación?</h4>
-            <div class="mt-1 button-configuration"><button  mat-raised-button color="accent" (click)="showText = !showText">Siguiente</button>
-            </div> -->
-    <div *ngIf="showText">
-        <h3 class="mt-1">Datos de la asociación</h3>
-        <form>
-            <mat-label>Tipo de asociación</mat-label>
-            <mat-form-field appearance="fill">
+
+        <mat-checkbox (change)="showText = !showText">¿Perteneces a una asociación?</mat-checkbox>
+        <div *ngIf="showText">
+            <h3 class="mt-1">Datos de la asociación</h3>
+            <mat-form-field appearance="outline">
                 <mat-label>Tipo de asociación</mat-label>
-                <mat-select matInput required>
+                <mat-select matInput formControlName="associationTypology">
                     <mat-option *ngFor="let asociation of asociations" [value]="asociation.value">
                         {{asociation.viewValue}}
                     </mat-option>
@@ -99,24 +94,36 @@
             <mat-label>Nombre de tu Asociación</mat-label>
             <mat-form-field appearance="outline">
                 <mat-label>Nombre</mat-label>
-                <input matInput placeholder="Nombre de la asociación">
+                <input matInput formControlName="associationName">
             </mat-form-field>
             <mat-label>Describe tu asociación</mat-label>
             <mat-form-field appearance="outline">
-                <textarea matInput placeholder="Escribe una breve presentación"></textarea>
+                <textarea matInput formControlName="associationDescription"></textarea>
             </mat-form-field>
             <mat-label>Describe temas de tu interés</mat-label>
             <mat-form-field appearance="outline">
-                <textarea matInput placeholder="Escribe temas de tú interés"></textarea>
+                <mat-chip-list #happyChipList>
+                    <mat-chip *ngFor="let item of happyArray" (removed)="removeHappyItem(item)">
+                        {{item.name}}
+                        <button matChipRemove>
+                            <mat-icon>cancel</mat-icon>
+                        </button>
+                    </mat-chip>
+                    <input formControlName="associationInterests" placeholder="..." [matChipInputFor]="happyChipList"
+                        [matChipInputSeparatorKeyCodes]="separatorKeysCodes" [matChipInputAddOnBlur]="addOnBlur"
+                        (matChipInputTokenEnd)="addHappyItem($event)">
+                </mat-chip-list>
+                <mat-hint>** Presiona <strong>ENTER</strong> después de escribir algo que te haga féliz, ej:
+                    <strong>"Playas"</strong>
+                </mat-hint>
             </mat-form-field>
 
-            <!-- <div class="button-configuration">
-                    <button class="button-configuration" mat-raised-button color="accent" (click)="showText = !showText">Volver a tus datos</button>
-                    
-                </div> -->
-        </form>
-    </div>
-    <div class="mt-3 button-configuration">
-        <button mat-raised-button color="accent" (click)="showText = !showText">Registrate</button>
-    </div>
+        </div>
+        <div class="set-12 ctrls mt-2">
+            <button class="set-6" type="button" mat-raised-button color="warn">
+                <small>Cancelar</small>
+            </button>
+            <button class="set-6"  type="submit" mat-raised-button color="primary" (click)="onUpdateUserData">Registrate</button>
+        </div>
+    </form>
 </div>
