--- a/src/app/hub/components/card-topics-mobile/card-topics-mobile.component.scss
+++ b/src/app/hub/components/card-topics-mobile/card-topics-mobile.component.scss
@@ -1,58 +1,21 @@
 :host{
- 
 
-  .topic-card {
-  padding: 10px;
-  background: #ffffff;
-  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.24);
-  border-radius: 5px;
-  width: 330px;
-  height: 110px;
-}
+  width: 100%;
+  height: 100%;
+  float: left;
+  padding: 0 20px;
 
-.topic-header{
-  display: flex;
-}
+  
 
-.topic-title {  
-  font-weight: 700;
-  font-size: 16px;
-  width: 80%;
-  height: 20px; 
-}
+.topic-card{
 
-.topic-viewmore {
-  width: 20%;
-  height: 17px;
-  font-weight: 600;
-  font-size: 14px;
-  text-decoration-line: underline;
-}
-
-.topic-body {
-  font-family: "Montserrat";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 17px;
-  margin-left: 5px;
-}
-
-.topic-footer {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.topic-icons {
-  font-family: "Material Icons";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 18px;
-}
-
-.topic-footer {
-  margin-bottom: 5px;
+  p{
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }  
+  .icons{
+    display: flex;
+   
+  }  
 }
 }
