--- a/src/app/hub/components/circle-chart-mobile/circle-chart-mobile.component.scss
+++ b/src/app/hub/components/circle-chart-mobile/circle-chart-mobile.component.scss
@@ -1,25 +1,23 @@
-.circleChart {
-  display: flex;
-  background: #ffffff;
-  padding: 20px;
-}
+:host {
+  .circleChart {
+    display: flex;
+    background: #ffffff;
+    padding: 20px;
 
-.textProgressValue {
-  font-family: "Noto Sans";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 25px;
-  color: #306eff;
-}
+    .textProgressValue {
+      font-weight: 700;
+      color: #306eff;
 
-.infoProgressValue {
-  font-family: "Noto Sans";
-  font-style: normal;
-  font-weight: 600;
-  font-size: 22px;
-}
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
 
-.circleChartInformation {
-  margin: 10px;
-}
+    }
 
+  }
+
+
+
+
+}
