--- a/src/app/hub/components/community-mobile/community-mobile.component.scss
+++ b/src/app/hub/components/community-mobile/community-mobile.component.scss
@@ -1,26 +1,13 @@
-.people{
-    display: flex;
-    flex-direction: row;
-}
+:host {
 
-.img-people {
-    width: 32px;
-    height: 32px;
+width: 100%;
+
+  .avatar {
+    width: 50px;
+    height: 50px;
+    border-radius: 100%;
+    display: block;
+    overflow: hidden;
+    border: 2px solid #ffffff;
   }
-
-.about{
-    width: 200px;
-}
-
-.name{
-    font-size: 14px;
-    padding: 3px;
-}
-.status{
-    font-size: 12px;
-    padding: 3px;
-}
-
-.name, .status{
-    width: 200px;
 }
