--- a/src/app/hub/components/line-chart-mobile/line-chart-mobile.component.scss
+++ b/src/app/hub/components/line-chart-mobile/line-chart-mobile.component.scss
@@ -1,4 +1,4 @@
-.card-line-chart {
+:host{.card-line-chart {
   width: 100%;
   margin-bottom: 30px;
   padding: 10px;
@@ -6,13 +6,6 @@
   box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.24);
 }
 
-::ng-deep .mat-progress-bar-fill::after {
-  background-color: #1e457c;
-}
-
-::ng-deep .mat-progress-bar-buffer {
-  background: #e4e8eb;
-}
 
 .vote-button-container {
   display: flex;
@@ -23,4 +16,5 @@
     width: 150px;
     border-radius: 5px;
   }
+}
 }
