--- a/src/app/hub/components/search-input-mobile/search-input-mobile.component.html
+++ b/src/app/hub/components/search-input-mobile/search-input-mobile.component.html
@@ -1,20 +1,9 @@
-<!-- <form class="form-inline my-2 my-lg-0">
-  <div class="input-wrapper">
-    <input type="search" class="input" placeholder="Buscar contenidos">
-
-    <svg xmlns="http://www.w3.org/2000/svg" class="input-icon" viewBox="0 0 20 20" fill="currentColor">
-      <path fill-rule="evenodd"
-        d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z"
-        clip-rule="evenodd" />
-    </svg>
-  </div>
-
-</form> -->
-
+<form [formGroup]="formGroup" >
 <mat-form-field appearance="outline">
-  <mat-label>Correo electrónico</mat-label>
-  <input type="text" matInput formControlName="email">
+  <mat-label>Buscar contenidos</mat-label>
+  <input type="text" matInput formControlName="contents">
   <button type="button" matSuffix>
     <mat-icon>search</mat-icon>
   </button>
 </mat-form-field>
+</form>
