--- a/src/app/hub/components/topic-single-mobile/topic-single-mobile.component.html
+++ b/src/app/hub/components/topic-single-mobile/topic-single-mobile.component.html
@@ -1,36 +1,35 @@
-<div >
+<div class="set-12 topic-single-mobile ">
 
-    <div class="header-topic-single" mat-dialog-actions>
-        <button mat-button mat-dialog-close >
-            <mat-icon >keyboard_arrow_left</mat-icon>
-        </button>
-            <h3>Temas</h3>
+    <div class="set-12">
+        <h3 class="set-11">Temas</h3>
+        <mat-icon class="set-1" mat-dialog-close>close</mat-icon>
     </div>
-    <mat-card class="mt-2"><mat-card-content>
-            <h3>FALTA DE EMPLEO FORMAL</h3>
-        </mat-card-content>
+
+    <mat-card>
         <mat-card-content>
+            <h3>FALTA DE EMPLEO FORMAL</h3>
             <p>La falta de empleo formal ha orillado a la sociedad mexicana a buscar empleos informales en todos los
                 sectores y ramas económicas del país. Aunado a esto, muchos de los empleos informales del país están
                 dedicados a
                 actividades ilegales o se encuentran domina dos por grupos delictivos...</p>
-            <div class="information-topic mt-1"> <button mat-fab style="background-color: primary">
+            <div>
+                <button mat-fab style="background-color: primary">
                     <mat-icon>thumb_up</mat-icon>
                 </button>
                 <span class="mt-1">Relevancia ciudadana</span>
                 <span class="mt-1">8</span>
-                <div class=" mt-3"><button mat-raised-button color="accent">Votar</button></div>
+                <button type="button" *ngIf="!userVoted" mat-raised-button color="accent" (click)="openModalVote()">
+                    <strong>Votar</strong>
+                  </button>
             </div>
-
-            
-            <div class="topic-icons mt-2">
+            <mat-card-footer>
                 <mat-icon class="topic-icons">favorite</mat-icon>
                 <mat-icon class="topic-icons">check_circle</mat-icon>
                 <mat-icon class="topic-icons">share</mat-icon>
                 <mat-icon class="topic-icons">report</mat-icon>
                 <mat-icon class="topic-icons">forum</mat-icon>
-            </div>
+            </mat-card-footer>
         </mat-card-content>
+
     </mat-card>
-    <div class="footer-single-topic mt-4"><button mat-raised-button color="accent">Permiso para editar</button></div>
 </div>
