--- a/src/app/components/public-document-mobile-top-ten/public-document-mobile-top-ten.component.html
+++ b/src/app/components/public-document-mobile-top-ten/public-document-mobile-top-ten.component.html
@@ -1,7 +1,6 @@
 <div class="set-12">
   <div class="set-2">
-    <button type="button" mat-mini-fab color="primary" (click)="displayCoverageMenu()"
-      [disabled]="solutions.length == 0">
+    <button type="button" mat-mini-fab color="primary" (click)="displayCoverageMenu()">
       <mat-icon>filter_list</mat-icon>
     </button>
   </div>
