include author in topic and solution

--- a/src/app/components/public-document-mobile-category-view/public-document-mobile-category-view.component.html
+++ b/src/app/components/public-document-mobile-category-view/public-document-mobile-category-view.component.html
@@ -108,7 +108,7 @@
 
   <div class="set-12 ctrls">
     <button type="button" mat-raised-button color="warn" (click)="onFilterSolutions()">
-      <small>Filtrar</small>
+      <small>Mostrar resultados</small>
     </button>
   </div>
 </div>
