--- a/src/app/components/public-document-mobile-solution-view/public-document-mobile-solution-view.component.html
+++ b/src/app/components/public-document-mobile-solution-view/public-document-mobile-solution-view.component.html
@@ -36,6 +36,10 @@
       </div>
     </div>
 
+    <div class="set-12 authorhldr">
+      <small>Autor: <strong>{{solution?.createdBy?.firstname}} {{solution?.createdBy?.lastname}}</strong></small>
+    </div>
+
     <div class="set-12 row" [innerHTML]="solution?.description"></div>
 
     <div class="set-12 txt-center row vote-tools">
