--- a/src/app/components/public-document-mobile-solution-view/public-document-mobile-solution-view.component.scss
+++ b/src/app/components/public-document-mobile-solution-view/public-document-mobile-solution-view.component.scss
@@ -19,6 +19,13 @@
     align-items: center;
   }
 
+  .authorhldr {
+    margin: 10px 0 0 0;
+    font-style: italic;
+    color: rgba($color: #000000, $alpha: 0.4);
+    font-size: 11pt;
+  }
+
   mat-card {
     margin-bottom: 10px;
     border-radius: 0 !important;
