--- a/src/app/components/public-document-mobile-topic-view/public-document-mobile-topic-view.component.scss
+++ b/src/app/components/public-document-mobile-topic-view/public-document-mobile-topic-view.component.scss
@@ -24,6 +24,13 @@
     align-items: center;
   }
 
+  .authorhldr {
+    margin: 10px 0 0 0;
+    font-style: italic;
+    color: rgba($color: #000000, $alpha: 0.4);
+    font-size: 11pt;
+  }
+
   .row:not(:first-child) {
     margin-top: 20px;
   }
