--- a/src/app/hub/components/card-goals-mobile/card-goals-mobile.component.html
+++ b/src/app/hub/components/card-goals-mobile/card-goals-mobile.component.html
@@ -1,9 +1,9 @@
 <div class="set-12 topic-card">
-    <mat-card  *ngFor="let topic of topics">
+    <mat-card  >
         <div>
-            <h3 class="set-9 ">{{topic.title}}</h3>
-            <span class="set-3" (click)="openDialog(topic._id)">Ver más</span>
-            <p class="set-12 ">{{topic.updateAt}}</p>
+            <h3 class="set-9 ">Tema 1</h3>
+            <span class="set-3" >Participa</span>
+            <p class="set-12 ">Ultima actualización</p>
         </div>
 
         <div class="set-12 icons">
