--- a/src/app/hub/components/line-chart-mobile/line-chart-mobile.component.scss
+++ b/src/app/hub/components/line-chart-mobile/line-chart-mobile.component.scss
@@ -1,20 +1,5 @@
-:host{.card-line-chart {
+:host{
+
   width: 100%;
-  margin-bottom: 30px;
-  padding: 10px;
-  background: #ffffff;
-  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.24);
-}
 
-
-.vote-button-container {
-  display: flex;
-  justify-content: center;
-
-  button {
-    height: 35px;
-    width: 150px;
-    border-radius: 5px;
-  }
-}
 }
