--- a/src/app/hub/components/tabs-mobile/tabs-mobile.component.html
+++ b/src/app/hub/components/tabs-mobile/tabs-mobile.component.html
@@ -8,6 +8,7 @@
       <search-input-mobile></search-input-mobile>
       <spider-chart-mobile></spider-chart-mobile>
       <circle-chart-mobile></circle-chart-mobile>
+      <card-solutions-mobile></card-solutions-mobile>
       <line-chart-mobile></line-chart-mobile>
     </mat-tab>
     <mat-tab label="Comunidad">
@@ -18,7 +19,7 @@
       <search-input-mobile></search-input-mobile>
       <h3>Metas Logradas</h3>
       <h3 >Participa, invita y denuncia</h3>
-      <card-topics-mobile></card-topics-mobile>
+      <card-goals-mobile></card-goals-mobile>
     </mat-tab>
 
   </mat-tab-group>
