--- a/src/app/components/public-document-mobile-subcategory-view/public-document-mobile-subcategory-view.component.html
+++ b/src/app/components/public-document-mobile-subcategory-view/public-document-mobile-subcategory-view.component.html
@@ -69,7 +69,8 @@
   </div>
 
   <div class="set-12 topic-list">
-    <div class="public-document-mobile-topic-list" [document]="document" [category]="subcategory"></div>
+    <div class="public-document-mobile-topic-list" [document]="document" [category]="subcategory"
+      [isCollaborator]="isCollaborator"></div>
   </div>
 
   <div class="set-12">
