--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -51,7 +51,7 @@
         </span>
       </button>
       <div class="usrname">{{ user.firstname }} {{ user.lastname }}</div>
-      <mat-icon class="avatar-icon" (click)="open = !open; displayProfileMenu()">keyboard_arrow_right</mat-icon>
+      <mat-icon class="arrow-rigth" (click)="open = !open; displayProfileMenu()">keyboard_arrow_right</mat-icon>
     </div>
 
     <div class="set-12 innernav">
@@ -72,19 +72,17 @@
 
 <div class="set-12 mobilenav" *ngIf="isDataAvailable && isMobile" [class.menuopen]="isProfile">
   <div class="set-12 topnav">
-    <div class="topnav-iconProfile">
-      <button id="topnav-button-profile" type="button" (click)="open = !open; isProfile = !isProfile">
-        <mat-icon color="accent" class="arrow-left">keyboard_arrow_left</mat-icon>
-      </button>
-    </div>
-    <div class="topnav-profile">
-      <div>Perfil</div>
-    </div>
-    <div class="set-6 txt-right" (click)="isProfile = !isProfile">
-      <button type="button">
-        <mat-icon color="accent">close</mat-icon>
-      </button>
-    </div>
+
+    <button class="set-1" type="button" (click)="open = !open; isProfile = !isProfile">
+      <mat-icon color="accent" >keyboard_arrow_left</mat-icon>
+    </button>
+    <button class="set-10" type="button" (click)="linkMe('profile');">
+      Pérfil
+    </button>
+    <button type="button" class="set-1" (click)="isProfile = !isProfile">
+      <mat-icon color="accent">close</mat-icon>
+    </button>
+
   </div>
 
   <div class="set-12 innernav">
