--- a/src/app/hub/components/tabs-mobile/tabs-mobile.component.html
+++ b/src/app/hub/components/tabs-mobile/tabs-mobile.component.html
@@ -4,14 +4,14 @@
       <search-input-mobile></search-input-mobile>
       <card-topics-mobile></card-topics-mobile>
     </mat-tab>
-    <mat-tab label="Profile">
+    <mat-tab label="Pérfil">
       <search-input-mobile></search-input-mobile>
       <spider-chart-mobile></spider-chart-mobile>
       <circle-chart-mobile></circle-chart-mobile>
       <card-solutions-mobile></card-solutions-mobile>
       <line-chart-mobile></line-chart-mobile>
     </mat-tab>
-    <mat-tab label="Comunidad">
+    <!-- <mat-tab label="Comunidad">
       <search-input-mobile></search-input-mobile>
       <community-mobile></community-mobile>
     </mat-tab>
@@ -20,7 +20,7 @@
       <h3>Metas Logradas</h3>
       <h3 >Participa, invita y denuncia</h3>
       <card-goals-mobile></card-goals-mobile>
-    </mat-tab>
+    </mat-tab> -->
 
   </mat-tab-group>
 </div>
