--- a/src/app/hub/components/topic-single-mobile/topic-single-mobile.component.scss
+++ b/src/app/hub/components/topic-single-mobile/topic-single-mobile.component.scss
@@ -1,26 +1,27 @@
 :host {
     .topic-single-mobile {
-        mat-card-content {
-            h3{
-                margin-bottom: 10px;
-            }
+        padding: 20px;
+        h3 {
+            margin-bottom: 10px;
+        }
 
-            div {
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
-                margin-top: 20px;
-                margin-bottom: 20px;
-            }
-        }
-        mat-card-footer {
+        .info {
             display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-            margin-top: 10px;
-            margin-bottom: 5px;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            margin-top: 20px;
+            margin-bottom: 20px;
         }
+    }
+
+    .icons {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        margin-top: 10px;
+        margin-bottom: 5px;
+
 
     }
 
