--- a/src/app/components/description-viewer/description-viewer.component.html
+++ b/src/app/components/description-viewer/description-viewer.component.html
@@ -25,7 +25,7 @@
       <h3 class="txt-left">{{title.toUpperCase()}}</h3>
     </div>
     <div class="set-2 txt-right">
-      <button type="button" mat-icon-button color="primary" matTooltip="Salir" matTooltipClass="tooltip"
+      <button type="button" mat-mini-fab color="primary" matTooltip="Salir" matTooltipClass="tooltip"
         (click)="killDialog()">
         <mat-icon>cancel</mat-icon>
       </button>
