--- a/src/app/components/description-viewer/description-viewer.component.scss
+++ b/src/app/components/description-viewer/description-viewer.component.scss
@@ -33,6 +33,14 @@
       top: 19px;
       right: 26px;
     }
+
+    .set-2 {
+      button {
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+      }
+    }
   }
 
   .body {
