--- a/src/app/public-documents/components/category-bars/category-bars.component.html
+++ b/src/app/public-documents/components/category-bars/category-bars.component.html
@@ -38,10 +38,7 @@
       matTooltipPosition="right"></div>
 
     <button type="button" class="catname" (click)="
-        linkMe(
-          '/documentos-publicos/' + document_id + '/categoria/' + layout._id
-        )
-      ">
+        linkMe('/documentos-publicos/' + document_id + '/categoria/' + layout._id)">
       <small>{{ layout.category.name }}</small>
     </button>
   </div>
