--- a/src/app/components/complaint-dialog/complaint-dialog.component.html
+++ b/src/app/components/complaint-dialog/complaint-dialog.component.html
@@ -1,6 +1,7 @@
 <div class="set-12 dialog-head">
   <div class="set-10">
     <h3>Denuncia</h3>
+    <input type="file" #file (change)="onFileSelected($event)" multiple>
   </div>
   <div class="set-2 txt-right">
     <button type="button" mat-mini-fab color="primary" (click)="killDialog()" [disabled]="submitted">
@@ -32,7 +33,17 @@
       <angular-editor formControlName="description" [config]="editorConfig"></angular-editor>
     </div>
 
+    <div class="set-12 file-hldr" *ngIf="fileNames.length != 0">
+      <p *ngFor="let name of fileNames">
+        <small>{{name}}</small>
+      </p>
+    </div>
+
     <div class="set-12 ctrls">
+      <button type="button" mat-mini-fab color="primary" (click)="file.click()"
+        [disabled]="complaintFormGroup.invalid || submitted">
+        <mat-icon>cloud_upload</mat-icon>
+      </button>
       <button type="submit" mat-raised-button color="primary" [disabled]="complaintFormGroup.invalid || submitted">
         <small>Denunciar</small>
       </button>
