--- a/src/app/legal/terms/terms.component.html
+++ b/src/app/legal/terms/terms.component.html
@@ -1,35 +1,30 @@
 <div class="innerhldr" [class.fixmob]="isMobile">
-  <p>
-    Mexicolectivo aspira a ser un espacio seguro donde coexista la pluralidad de ideas e información. Creemos y
-    promovemos
-    la libertad de expresión siempre con respeto e inclusión en la diversidad. Cualquier comentario discriminatorio,
-    fóbico, de insultos o de promoción del discurso de odio se podrá denunciar y será eliminado de la plataforma con un
-    primer aviso a la persona usuaria por parte de la administración de la página. En caso de que el comportamiento de
-    agresión sea reiterativo, la administración procederá a la eliminación de la cuenta de la persona usuaria.
-    Los propietarios de la pagina somos un grupo de ciudadanos mexicanos de origen diverso y que tenemos en común querer
-    que nuestro país salga adelante de la crisis que hoy se vive.
-  </p>
+  <p>Las personas propietarias de la plataforma digital somos un grupo de personas mexicanas de origen diverso, que
+    desde la ciudadanía compartimos la voluntad que nuestro país desarrollé soluciones colectivas a las problemáticas
+    diversas y pueda salir adelante por las múltiples crisis que enfrentamos como sociedad. </p>
 
-  <p>La pagina es una herramienta para que los miembros de la sociedad civil participe para opinar, construir e incidir
-    rumbo al futuro.</p>
+  <p>La plataforma es una herramienta para que integrantes de la sociedad civil, de la academía, de los movimientos
+    sociales y de la ciudadanía en general participen para opinar, crear, construir en colectivo, compartir,
+    intercambiar ideas e incidir desde el presente rumbo a un futuro más justo, próspero e incluyente. </p>
 
-  <p>Se cuenta con un documento vivo que se va ajustando en el tiempo con los comentarios, observaciones y testimonios
-    de los participantes.</p>
+  <p>Se cuenta con una reflexión base como punto de partida pretendiendo fungir como un documento vivo, resultado del
+    pensamiento colectivo, que se vaya ajustando en el tiempo con comentarios, observaciones, testimonios y propuestas
+    de las personas participantes.</p>
 
   <p>Se publican estadísticas de participación en diferentes cortes.</p>
 
-  <p>El documento vivo es el resultado del pensamiento colectivo de los participantes.</p>
+  <p>La plataforma es un espacio abierto e incluyente en el cual se podrá participar sin importar edad, género,raza,
+    clase social o religión.</p>
 
-  <p>Podrán participar todos los ciudadanos mexicanos sin importar edad, género,raza, clase social o religión.</p>
+  <p>La participación es totalmente gratuita y la información será protegida con base en los términos del Aviso de
+    Privacidad.</p>
 
-  <p>La participación es totalmente gratuita y la información será protegida en los términos del Aviso de Privacidad.
-  </p>
-
-  <p>Para la ventanita de alerta al entrar en la plataforma:</p>
-
-  <p>Te recordamos que Mexicolectivo es un espacio abierto y pacífico de participación donde se intercambian ideas
-    plurales
-    con libertad de expresión siempre con respeto sin insultos, violencia o promoción del discurso de odio. Tu
-    compromiso
-    es fundamental para hacerlo posible. Gracias.</p>
+  <p>Mexicolectivo aspira a ser un espacio seguro donde coexista la pluralidad de ideas e información. Creemos y
+    promovemos la libertad de expresión siempre con respeto e inclusión en la diversidad. Cualquier comentario
+    discriminatorio, fóbico, de insultos o de promoción del discurso de odio se podrá denunciar y será eliminado de la
+    plataforma con un primer aviso a la persona usuaria por parte de la administración de la página. En caso de que el
+    comportamiento de agresión sea reiterativo, la administración procederá a la eliminación de la cuenta de la persona
+    usuaria. </p>
 </div>
+
+<div class="app-footer"></div>
