--- a/src/app/legal/terms/terms.component.scss
+++ b/src/app/legal/terms/terms.component.scss
@@ -1,16 +1,22 @@
 :host {
   width: 100%;
+  height: 100%;
   float: left;
-  padding: 20px;
+  // padding: 20px;
+  display: flex;
+  flex-direction: column;
 
   .innerhldr {
-    width: 70%;
+    width: 60%;
     float: left;
-    margin: 80px 15% 0 15%;
+    margin: 0 20% 40px 20%;
+    flex: 1 0 auto;
+    padding: 120px 0 0 0;
 
     &.fixmob {
       width: 100%;
-      margin: 0 !important;
+      margin: 0 0 40px 0 !important;
+      padding: 40px 20px 0 20px;
     }
   }
 
@@ -21,5 +27,9 @@
 
   p:last-child {
     margin-bottom: 0;
+  }
+
+  .app-footer {
+    flex-shrink: 0;
   }
 }
